# feedback

./: .env.example  .gitignore  README.md  bun.lockb  package.json
.github/workflows/: release.yml
scripts/: install-local-whisper.sh  install-macos-app.sh
src/: App.css  App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/sidecar/: ImageDictionSidecar.swift
src-tauri/src/: debug_log.rs  lib.rs  main.rs  model.rs  openai.rs  settings.rs  sidecar.rs  storage.rs  transcription.rs  whisper.rs
src/components/: MainShell.tsx  SettingsShell.tsx
src/lib/: audio.ts
